--- a/forms/forms.html
+++ b/forms/forms.html
@@ -4,6 +4,8 @@
     <title>Registration Page</title>
 </head>
 <body style="background-color: lightgreen;">
+    <a href="../index.html">home page</a>
+    
     <form>
         <label>Firstname</label>
         <input type="text" name="firstname" size="15"/><br><br>
