--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <a  href="./contact/contact.html" target="_blank" >Contact</a><br>
     <a  href="./project/project.html" target="_blank">Project</a><br>
     <a  href="./skill page/skill.html" target="_blank">Skills</a><br>
+    <a href="./forms/forms.html" target="_blank">form</a><br>
 
      <br>
     <img src="pic 1.jpeg" width="200" height="200" style="border-radius: 20px;">
