--- a/project/project.html
+++ b/project/project.html
@@ -9,7 +9,7 @@
     <a href="../index.html">home page</a> <br>
     <a href="../contact/contact.html">contact page</a><br>
     <a href="../skill page/skill.html">skill page</a><br>
-
+    <a href="../forms/forms.html" >form</a>
     <h1>Project Title</h1>
     <ul>
     <li>HTML AND CSS</li>
