--- a/contact/contact.html
+++ b/contact/contact.html
@@ -9,6 +9,7 @@
     <a href="../index.html">Home page</a> <br>
     <a href="../project/project.html">Project page</a> <br>
     <a href="../skill page/skill.html">Skill page</a> <br>
+    <a href="../forms/forms.html">form</a>
     <ul>
     <h1>contact detail</h1>
     <img src="pic 4.png" width="50" height="50">
