--- a/skill page/skill.html
+++ b/skill page/skill.html
@@ -10,6 +10,7 @@
     <a href="./skill.html">home page</a> <br>
     <a href="../contact/contact.html">contact page</a> <br>
     <a href="../project/project.html">project page</a> <br>
+    <a href="../forms/forms.html">form</a>
     <dl>
 
     <dt>Ms Word</dt>
