--- a/forms/forms.html
+++ b/forms/forms.html
@@ -4,7 +4,10 @@
     <title>Registration Page</title>
 </head>
 <body style="background-color: lightgreen;">
-    <a href="../index.html">home page</a>
+    <a href="../index.html">home page</a><br><br>
+    <a href="../contact/contact.html">contact</a><br><br>
+    <a href="../project/project.html">project</a><br><br>
+    <a href="../skill page/skill.html">skill</a><br><br>
     
     <form>
         <label>Firstname</label>
